# docata

./: .gitignore  AGENTS.md  Cargo.toml  README.md  dist-workspace.toml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/workflows/: nix.yaml  publish-npm.yml  release.yml  rust.yaml
docata/: Cargo.toml
docata-cli/: Cargo.toml
docata-cli/src/: app.rs  main.rs
docata/src/: app.rs  build.rs  catalog.rs  catalog_presentation.rs  domain.rs  error.rs  format.rs  graph.rs  lib.rs  main.rs  relation.rs  relation_presentation.rs  scan.rs  validate.rs
docs/: bar.md  catalog.json  foo.md
docs/foo/: hoge.md
