[workspace]
members = ["docata", "docata-cli"]
resolver = "3"

[workspace.dependencies]
clap = "4.5.60"
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
walkdir = "2.5.0"
yaml_serde = "0.10.3"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.package]
edition = "2024"
version = "0.0.5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
