[package]
edition.workspace = true
name = "docata"
public.workspace = true
version.workspace = true

[dependencies]
clap.features = ["derive"]
clap.workspace = true
rayon.workspace = true
serde.features = ["derive"]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true
yaml_serde.workspace = true

[lints]
workspace = true
