[package]
edition.workspace = true
name = "docata"
version.workspace = true
description = "CLI for building and querying a markdown document dependency catalog"
repository = "https://github.com/pranc1ngpegasus/docata"
homepage = "https://github.com/pranc1ngpegasus/docata"
documentation = "https://docs.rs/docata"
license = "MIT"

[dependencies]
clap.features = ["derive"]
clap.workspace = true
rayon.workspace = true
serde.features = ["derive"]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true
yaml_serde.workspace = true

[lints]
workspace = true
