[package]
edition.workspace = true
name = "docata"
version.workspace = true
description = "Core library for building and querying a markdown document dependency catalog"
repository = "https://github.com/pranc1ngpegasus/docata"
homepage = "https://github.com/pranc1ngpegasus/docata"
documentation = "https://docs.rs/docata"
license = "MIT"

[dependencies]
rayon.workspace = true
serde.features = ["derive"]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true
yaml_serde.workspace = true

[lints]
workspace = true
